# oxidized-transformers

./: AUTHORS  CODING.md  COPYRIGHT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
oxidized-cuda-kernels/: Cargo.toml  build.rs
oxidized-cuda-kernels/src/: ffi.rs  lib.rs  nonzero.cu  nonzero.rs  step_output_iterator.cuh
oxidized-transformers/: Cargo.toml
oxidized-transformers-pyo3/: Cargo.toml  pyproject.toml
oxidized-transformers-pyo3/src/: lib.rs
oxidized-transformers/src/: kv_cache.rs  lib.rs
oxidized-transformers/src/architectures/: embeddings.rs  mod.rs  output.rs
oxidized-transformers/src/layers/: build_module.rs  identity.rs  layer_norm.rs
oxidized-transformers/src/layers/attention/: alibi.rs  mask.rs  mod.rs  sdpa.rs  self_attention.rs
oxidized-transformers/src/layers/embeddings/: qk_rotary_embeddings.rs  rotary_embeddings.rs
oxidized-transformers/src/layers/transformer/: embeddings.rs  mod.rs
oxidized-transformers/src/models/: mod.rs  util.rs
oxidized-transformers/src/models/albert/: encoder.rs  mod.rs
oxidized-transformers/src/models/bert/: encoder.rs  mod.rs
oxidized-transformers/src/models/gpt_neox/: causal_lm.rs  decoder.rs  mod.rs
oxidized-transformers/src/models/hf/: checkpoint.rs  from_hf.rs  hf_hub.rs
oxidized-transformers/src/models/llama/: causal_lm.rs  decoder.rs  mod.rs
oxidized-transformers/src/models/roberta/: embeddings.rs  encoder.rs  mod.rs
oxidized-transformers/src/models/transformer/: causal_lm.rs  decoder.rs  encoder.rs  mod.rs
oxidized-transformers/src/models/xlm_roberta/: encoder.rs  mod.rs
oxidized-transformers/src/ops/: mod.rs  nonzero.rs
oxidized-transformers/src/repository/: hf_hub.rs  mod.rs  repo.rs
oxidized-transformers/src/tokenizers/: hf_hub.rs  hf_tokenizer.rs  mod.rs  tokenizer.rs
oxidized-transformers/src/util/: device.rs  mod.rs  renaming_backend.rs  tensor_ext.rs
src/: error.rs  kv_cache.rs  lib.rs  util.rs
src/architectures/: causal_lm.rs  decoder.rs  encoder.rs  mod.rs
src/layers/: activation.rs  attention.rs  dropout.rs  embeddings.rs  feedforward.rs  identity.rs  mod.rs  normalization.rs  transformer.rs
src/layers/attention/: alibi.rs  mask.rs  mod.rs  sdpa.rs  self_attention.rs
src/layers/embeddings/: mod.rs  qk_rotary_embeddings.rs  rotary_embeddings.rs
src/layers/transformer/: embeddings.rs  layer.rs  mod.rs
src/models/: mod.rs
src/models/albert/: layer.rs
src/models/gpt_neox/: causal_lm.rs  decoder.rs
src/models/hf/: from_hf.rs  mod.rs
src/models/llama/: causal_lm.rs  decoder.rs
src/models/transformer/: causal_lm.rs  decoder.rs  mod.rs
src/repository/: file.rs  hf_hub.rs  local_file.rs  mod.rs  repo.rs
src/tokenizers/: hf_tokenizer.rs  pieces.rs
src/util/: mod.rs  renaming_backend.rs
