[workspace]
members = [
    "oxidized-transformers"
]
resolver = "2"

[workspace.dependencies]
approx = "0.5"
candle-core = "0.4"
candle-nn = "0.4"
hf-hub = "0.3"
ndarray = { version = "0.15.4", features = ["approx-0_5"] }
rand_pcg = "0.3"
rand_core = "0.6"
regex = "1.10"
rstest = "0.18"
snafu = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.15", features = ["http"] }
