[workspace]
members = [
    "oxidized-transformers",
    "oxidized-transformers-pyo3"
]
exclude = [
    "oxidized-cuda-kernels",
]
resolver = "2"

[workspace.package]
description = "Transformers library (not functional yet)"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/oxidized-transformers/oxidized-transformers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidized-transformers/oxidized-transformers"

[workspace.dependencies]
approx = "0.5"
candle-core = "0.4"
candle-nn = "0.4"
cudarc = { version = "0.10.0", features = ["f16"] }
half = "2.4"
hf-hub = "0.3"
ndarray = { version = "0.15.4", features = ["approx-0_5"] }
oxidized-cuda-kernels = { path = "./oxidized-cuda-kernels" }
rand_pcg = "0.3"
rand_core = "0.6"
regex = "1.10"
rstest = "0.18"
snafu = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.15", features = ["http"] }
