[package]
name = "oxidized-cuda-kernels"
description = "Additional CUDA kernels for Oxidized Transformers"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidized-transformers/oxidized-transformers"

[dependencies]
candle-core = { version = "0.4", features = ["cuda"] }
cudarc = { version = "0.10", features = ["f16"] }
half = "2.4"

[build-dependencies]
bindgen_cuda = "0.1.1"
snafu = "0.8"