[package]
name = "oxidized-transformers"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true


[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
hf-hub = { workspace = true }
regex = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
ndarray = { workspace = true, features = ["approx-0_5"] }
rand_pcg = { workspace = true }
rand_core = { workspace = true }
