[package]
name = "oxidized-transformers"
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true


[dependencies]
candle-core = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-nn = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
oxidized-cuda-kernels = { workspace = true, optional = true }
regex = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
ndarray = { workspace = true, features = ["approx-0_5"] }
rand_pcg = { workspace = true }
rand_core = { workspace = true }

[features]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:oxidized-cuda-kernels"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal"]